# picodi-fastapi-example

./: Dockerfile  Makefile  README.md  ci.sh  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: workflow-ci.yml
app/: deps.py  user.py  utils.py  weather.py
app/api/: fastapi_deps.py  main.py
app/api/routes/: users.py  weather.py
app/cli/: create_user.py  migrate.py
app/data_access/: sqlite.py  user.py  weather.py
picodi_app/: conf.py  deps.py  user.py  utils.py  weather.py
picodi_app/api/: fastapi_deps.py  main.py
picodi_app/api/routes/: users.py  weather.py
picodi_app/cli/: create_user.py  migrate.py
picodi_app/data_access/: sqlite.py  user.py  weather.py
tests/: conftest.py  object_mother.py  test_run_migration_command.py  test_utils.py  test_weather_models.py
tests/test_api/: conftest.py  test_create_user_command.py  test_current_weather.py  test_geocode.py  test_weather_forecast.py  test_whoami.py
tests/test_api/cassettes/test_current_weather/: test_anonymous_can_get_current_weather_specifying_coords.yaml  test_anonymous_can_get_current_weather_specifying_coords[redis].yaml  test_anonymous_can_get_current_weather_specifying_coords[sqlite].yaml  test_user_can_get_current_weather_by_coords.yaml  test_user_can_get_current_weather_by_coords[redis].yaml  test_user_can_get_current_weather_by_coords[sqlite].yaml  test_user_can_get_current_weather_by_coords_from_profile.yaml  test_user_can_get_current_weather_by_coords_from_profile[redis].yaml  test_user_can_get_current_weather_by_coords_from_profile[sqlite].yaml
tests/test_api/cassettes/test_geocode/: test_can_geocode_city_by_name.yaml  test_can_geocode_city_by_name[redis].yaml  test_can_geocode_city_by_name[sqlite].yaml
tests/test_api/cassettes/test_weather_forecast/: test_anonymous_can_get_forecast_specifying_coords.yaml  test_anonymous_can_get_forecast_specifying_coords[redis].yaml  test_anonymous_can_get_forecast_specifying_coords[sqlite].yaml  test_user_can_get_forecast_by_coords.yaml  test_user_can_get_forecast_by_coords[redis].yaml  test_user_can_get_forecast_by_coords[sqlite].yaml  test_user_can_get_forecast_by_coords_from_profile.yaml  test_user_can_get_forecast_by_coords_from_profile[redis].yaml  test_user_can_get_forecast_by_coords_from_profile[sqlite].yaml
